<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <!-- Pregunta -->
    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunta_1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="32dp"/>

    <!-- Opciones de respuesta -->
    <Button
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/option_button_color"
        android:text="@string/respuesta_1_1"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/option_button_color"
        android:text="@string/respuesta_1_2"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/option_button_color"
        android:text="@string/respuesta_1_3"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/option4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/option_button_color"
        android:text="@string/respuesta_1_4"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

</LinearLayout>
